Added comments and rename some variables